; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_input_DecoderFlush.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_input_DecoderFlush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.decoder_owner = type { i32, i64, i32, %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i64 }

@VIDEO_ES = common dso_local global i64 0, align 8
@SPU_ES = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @input_DecoderFlush(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.decoder_owner*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.decoder_owner* @dec_get_owner(i32* %4)
  store %struct.decoder_owner* %5, %struct.decoder_owner** %3, align 8
  %6 = load %struct.decoder_owner*, %struct.decoder_owner** %3, align 8
  %7 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @vlc_fifo_Lock(i32 %8)
  %10 = load %struct.decoder_owner*, %struct.decoder_owner** %3, align 8
  %11 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @vlc_fifo_DequeueAllUnlocked(i32 %12)
  %14 = call i32 @block_ChainRelease(i32 %13)
  %15 = load %struct.decoder_owner*, %struct.decoder_owner** %3, align 8
  %16 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %15, i32 0, i32 0
  store i32 1, i32* %16, align 8
  %17 = load %struct.decoder_owner*, %struct.decoder_owner** %3, align 8
  %18 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %17, i32 0, i32 4
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %45

21:                                               ; preds = %1
  %22 = load %struct.decoder_owner*, %struct.decoder_owner** %3, align 8
  %23 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %22, i32 0, i32 3
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @VIDEO_ES, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %35, label %28

28:                                               ; preds = %21
  %29 = load %struct.decoder_owner*, %struct.decoder_owner** %3, align 8
  %30 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %29, i32 0, i32 3
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @SPU_ES, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %45

35:                                               ; preds = %28, %21
  %36 = load %struct.decoder_owner*, %struct.decoder_owner** %3, align 8
  %37 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = icmp eq i64 %38, 0
  br i1 %39, label %40, label %45

40:                                               ; preds = %35
  %41 = load %struct.decoder_owner*, %struct.decoder_owner** %3, align 8
  %42 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %41, i32 0, i32 1
  %43 = load i64, i64* %42, align 8
  %44 = add nsw i64 %43, 1
  store i64 %44, i64* %42, align 8
  br label %45

45:                                               ; preds = %40, %35, %28, %1
  %46 = load %struct.decoder_owner*, %struct.decoder_owner** %3, align 8
  %47 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %46, i32 0, i32 2
  %48 = load i32, i32* %47, align 8
  %49 = call i32 @vlc_fifo_Signal(i32 %48)
  %50 = load %struct.decoder_owner*, %struct.decoder_owner** %3, align 8
  %51 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %50, i32 0, i32 2
  %52 = load i32, i32* %51, align 8
  %53 = call i32 @vlc_fifo_Unlock(i32 %52)
  ret void
}

declare dso_local %struct.decoder_owner* @dec_get_owner(i32*) #1

declare dso_local i32 @vlc_fifo_Lock(i32) #1

declare dso_local i32 @block_ChainRelease(i32) #1

declare dso_local i32 @vlc_fifo_DequeueAllUnlocked(i32) #1

declare dso_local i32 @vlc_fifo_Signal(i32) #1

declare dso_local i32 @vlc_fifo_Unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
